opam-version: "1.2"
maintainer: "Team Raccoons <racoon@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/ocaml-libjwt"
doc: "https://issuu.github.io/ocaml-libjwt/"
dev-repo: "git+https://github.com/issuu/ocaml-libjwt.git"
bug-reports: "https://github.com/issuu/ocaml-libjwt/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "alcotest" {test}
]
depexts: [
  "libjwt-dev" {os-distribution = "debian" & os-version >= "10"}
  "libjwt-dev" {os-distribution = "ubuntu" & os-version >= "17.10"}
  "libjwt" {os-distribution = "homebrew"}
]
