opam-version: "2.0"
maintainer: "Team Raccoons <racoon@issuu.com>"
author: "Team Raccoon"
homepage: "https://github.com/issuu/ocaml-libjwt"
doc: "https://issuu.github.io/ocaml-libjwt/"
dev-repo: "git+https://github.com/issuu/ocaml-libjwt.git"
bug-reports: "https://github.com/issuu/ocaml-libjwt/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "alcotest" {test}
]
depexts: [
  ["libjwt-dev"] {os-distribution = "debian"}
  ["libjwt-dev"] {os-distribution = "ubuntu"}
  ["libjwt"] {os-distribution = "homebrew"}
]
